[package]
name = "blink"
version = "0.1.0"
authors = ["Vasilii Vazhesov"]
edition = "2018"

[dependencies]
#cortex-m = "0.5.8"
#cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
cortex-m-rt = { version = "0.6.12" }
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"
nb = "0.1.1"
embedded-hal = "0.2.3"
panic-halt = "0.2"
stm32f0 = "0.9"
font8x8 = { version = "0.2", default-features = false }

#panic-semihosting = "0.5.1"
#cortex-m-semihosting = "0.3.2"
#nb = "0.1.1"
#cortex-m-rtfm = "0.4.0"
#embedded-hal = "0.2.3"

#[dependencies.stm32f0]
#version = "0.8.0"
#features = ["stm32f0x0"]

[dependencies.stm32f0xx-hal]
version = "0.15.2"
features = ["stm32f030x4", "rt"]

# [dependencies.stm32ral]
# version = "0.4.0"
# features = ["stm32f0x0"]

[dependencies.cortex-m-rtfm]
version = "0.5.1"

[profile.release]
# or "z"
opt-level = "s"
# panic = 'abort'